--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    
+
     <div class="mobile-container">
         <div class="header-tabs">
             <span>Ringkasan</span>
@@ -145,15 +145,15 @@
         <h3>URL Ikon Bawah (Promo)</h3>
         <div class="edit-group">
             <label>Icon Diskon BNB (URL)</label>
-            <input type="text" id="in-url-bnb" class="global-input" value="https://cryptologos.cc/logos/bnb-bnb-logo.png?v=025">
+            <input type="text" id="in-url-bnb" class="global-input" value="https://iili.io/fqud2Fp.png">
         </div>
         <div class="edit-group">
             <label>Icon BFUSD (URL)</label>
-            <input type="text" id="in-url-bfusd" class="global-input" value="https://cryptologos.cc/logos/usd-coin-usdc-logo.png?v=025">
+            <input type="text" id="in-url-bfusd" class="global-input" value="https://iili.io/fqTUygV.png">
         </div>
         <div class="edit-group">
             <label>Icon LDUSDT (URL)</label>
-            <input type="text" id="in-url-ldusdt" class="global-input" value="https://cryptologos.cc/logos/tether-usdt-logo.png?v=025">
+            <input type="text" id="in-url-ldusdt" class="global-input" value="https://iili.io/fquqOxt.jpg">
         </div>
 
         <hr style="border-color: #444; margin: 20px 0;">
